--- a/vignettes/aicsPaper.Rmd
+++ b/vignettes/aicsPaper.Rmd
@@ -68,8 +68,11 @@ from tumor-derived data would be beneficial.
 
 The **RAIDS** package implements an inference procedure that has been
 specifically developed to accurately infer genetic ancestry from 
-cancer-derived sequencing. The covered cancer-derived sequencing are, more 
-specifically, tumor exomes, targeted gene panels and RNA sequences.
+cancer-derived sequencing. The covered cancer-derived sequencing are:
+
+* tumor exomes
+* targeted gene panels 
+* RNA sequences
 
 The **RAIDS** package includes a data synthesis method that enables 
 the selection of the
@@ -115,7 +118,7 @@ The main steps are:
 3. Find the optimized parameters for the ancestry inference
 4. Run the ancestry inference on the external study
 
-In the following sections, those main steps are described in details.
+Those main steps are described in details in the following sections.
 
 <br>
 <br>
@@ -130,11 +133,11 @@ knitr::include_graphics("MainSteps_Step1_v01.png")
 
 ******
 
-This step generates 3 important files:
+This step generates 3 important reference files:
 
 - The 1KG GDS File
-- The SNV Annotation GDS file
-- The SNV Retained VCF file
+- The 1KG SNV Annotation GDS file
+- The 1KG SNV Retained VCF file
 
 <span style="color:darkred;font-weight:bold">Beware that the 3 pre-processed 
 files are available at this address:</span>
@@ -170,15 +173,15 @@ knitr::include_graphics("MainSteps_Step2_v01.png")
 
 The required sub-steps are:
 
-1. Create a directory containing the 3 required reference files
+1. Create a directory containing the 3 reference files from 1KG
 2. Generate a Sample SNP pileup file (1 file per sample)
-3. Create a RDS file containing information about the samples
-4. Create a GDS Sample file (1 GDS file per sample)
+3. Create a Sample RDS file containing information about the samples
+4. Create a Sample GDS file (1 GDS file per sample)
 5. Generate a pruned subset of the single nucleotide variants (SNVs) 
 6. Estimate the allelic frequency for the pruned SNVs
 
-Beware that a mapped BAM file is needed for each sample. The reference genome 
-used for the mapping must correspond to the one used to generate the 
+Beware that a mapped BAM file is needed for each sample (step 2). The reference 
+genome used for the mapping must correspond to the one used to generate the 
 1KG GDS file. In this case, the 1KG GDS file is based on hg38 genome.
 
 <br>
@@ -205,7 +208,7 @@ wget https://labshare.cshl.edu/shares/krasnitzlab/aicsPaper/snvSel0.01.vcf.gz
 ```
 
 The 3 files should be stored in the same directory. For the current 
-demonstration, the directory will be refered as **PATH_REF**.
+demonstration, the directory will be referred as **PATH_REF**.
 
 For more information on how to generate your own reference files, 
 you can refer to the vignette 
@@ -221,24 +224,25 @@ is associated to the facets package [@Shen2016]. Given a VCF file
 containing SNP locations, 
 [snp-pileup](https://github.com/mskcc/facets/tree/master/inst/extcode) 
 application outputs, for each location, 
-the counts of the reference and alternative nucleotide from an BAM input.
+the counts of the reference and alternative nucleotides from an BAM input.
 
 At this step, 
 [snp-pileup](https://github.com/mskcc/facets/tree/master/inst/extcode) is used 
-to generate a Sample SNP pileup file that will contain the reference and 
-alternative 
-nucleotides counts at each SNP location present in the reference 1KG GDS file.
-The 1KG VCF file, which contains the list of retained 1KG SNVs, is required. 
+to generate a **Sample SNP pileup file** that will contain the reference and 
+alternative nucleotide counts at each SNP location present in the 
+reference 1KG GDS file.
+The **1KG SNV Retained VCF file**, which contains the list of 
+retained 1KG SNVs, is required. 
 
 
 ```{r graphStep2_SubStep2, echo=FALSE, fig.align="center", fig.cap="Generate a Sample SNP pileup file (1 file per sample)", out.width='100%', results='asis'}
 knitr::include_graphics("MainSteps_Step2_SubStep2_SNP-Pileup_v01.mod.png")
 ```
 
-Beware that the name assigned to the Sample SNP pileup file will correspond to 
-the Sample identifier (Name.ID) in the following analysis. For example, a SNP 
-pileup file called "Sample.01.txt.gz" would be associated to the 
-sample "Sample.01". 
+Beware that the name assigned to the **Sample SNP pileup file** will correspond 
+to the Sample identifier (Name.ID) in the following analysis. For example, a 
+SNP pileup file called "Sample.01.txt.gz" would be associated to the 
+"Sample.01" sample. 
 
 This is the command line to run 
 [snp-pileup](https://github.com/mskcc/facets/tree/master/inst/extcode):
@@ -262,13 +266,14 @@ snp-pileup -g -d5000 -q15 -Q20  -r0 PATH_REF/snvSel0.01.vcf.gz PATH_OUT/Name.ID.
 
 <br>
 
-### Sub-Step 3. Create a RDS file containing the information about the samples
+### Sub-Step 3. Create a Sample PED RDS file containing the information about the samples
 
-A RDS file describing the samples that are part of the analysis is required.
+A RDS file describing all the samples that are part of the analysis 
+is required.
 
 The RDS file must contain a *data.frame* with those 5 columns:
 
-- **Name.ID**: The unique sample identifier. The GDS Sample file associated to 
+- **Name.ID**: The unique sample identifier. The Sample VCF file associated to 
 this sample should be called "Name.ID.txt.gz". 
 - **Case.ID**: The patient identifier associated to the sample.
 - **Sample.Type**: The information about the sample type (primary tumor, 
@@ -276,17 +281,17 @@ metastasis, normal, etc..).
 - **Diagnosis**: The diagnosis associated to the patient.
 - **Source**: The source of the sample (example: TCGA-BRCA).
 
-The row names of the *data.frame* must be the **Name.ID**.
+Important: The row names of the *data.frame* must be the **Name.ID**.
 
-This file is referred as the PED RDS file (PED for pedigree). Alternatively, 
-the PED information can be saved in another type of file (CVS, etc..) as long 
-as the data.frame information can be regenerated in R (with _read.csv()_ or 
-else). 
+This file is referred as the **Sample PED RDS file** (PED for pedigree). 
+Alternatively, the PED information can be saved in another type of 
+file (CVS, etc..) as long as the *data.frame* information can be regenerated 
+in R (with _read.csv()_ or else). 
 
 
 ```{r pedCreation, echo=TRUE}
 ##############################################################
-## Location of the new PED RDS file
+## Location of the new Sample PED RDS file
 ##############################################################
 data.dir <- system.file("extdata", package="RAIDS")
 demo_PED_File <- file.path(data.dir, "Demo_PED.RDS")
@@ -303,7 +308,7 @@ pedDF <- data.frame(Name.ID = c("Sample_01", "Sample_02", "Sample_03"),
                     stringsAsFactors = FALSE)
 
 ##############################################################
-## The rownames must correspond to the name of the samples
+## The row names must correspond to the name of the samples
 ##############################################################
 rownames(pedDF) <- pedDF$Name.ID
 
@@ -318,13 +323,13 @@ rm(demo_PED_File)
 
 <br>
 
-### Sub-Step 4. Create a GDS Sample file (1 GDS file per sample)
+### Sub-Step 4. Create a Sample GDS file (1 GDS file per sample)
 
-This step requires 4 files as input:
+This step requires 3 files as input:
 
-- The 1KG GDS file
-- The Sample SNP pileup file (one per sample present in the study)
-- The PED RDS file
+- The **1KG GDS file**
+- The **Sample SNP pileup file** (one per sample present in the study)
+- The **Sample PED RDS file** (one file with information for all samples in the study)
 
 A *data.frame* containing the general information about the study is 
 also required. The *data.frame* must contain those 3 columns:
@@ -334,8 +339,8 @@ also required. The *data.frame* must contain those 3 columns:
 - **study.platform**: The type of sequencing (example: RNA-seq).
 
 Using all those inputs, the *createStudy2GDS1KG()* function will 
-generate a GDS Sample file. One GDS Sample file is created for each sample 
-passed to the *listSamples* argument.
+generate a **Sample GDS file**. One **Sample GDS file** is created for each 
+sample passed to the *listSamples* argument.
 
 ```{r appendStudy2GDS1KG, echo=TRUE, eval=FALSE}
 ##############################################################
@@ -390,7 +395,7 @@ studyDF <- data.frame(study.id = "Id of the study",
 listSamples <- ped[, "Name.ID"]
     
 #################################################################
-## This function creates one GDS Sample file for each
+## This function creates one Sample GDS file for each
 ## sample present in the 'listSamples' parameter.
 #################################################################
 createStudy2GDS1KG(PATHGENO = PATHGENO,
@@ -408,10 +413,10 @@ createStudy2GDS1KG(PATHGENO = PATHGENO,
 The initial list of 1KG SNVs is pruned, using linkage disequilibrium analysis, 
 to retained as subset of SNVs of interest for each sample. The 
 list of selected SNVs is specific to each sample and the information about the 
-retained SNVs is added to the GDS Sample file.
+retained SNVs is added to the **Sample GDS file**.
 
-The __pruningSample()__ function requires the 1KG GDS file as input. It also 
-requires the path to the GDS Sample files.
+The __pruningSample()__ function requires the **1KG GDS file** as input. It 
+also requires the path to the **Sample GDS file(s)**.
 
 Beware that this step can requisite large disk space.
 
@@ -433,7 +438,7 @@ file.GDS <- file.path(PATH_1KG, fileName.GDS.1KG)
 gds_1KG <- snpgdsOpen(file.GDS)
 
 ##############################################################
-## All GDS Sample files need to be located in the same 
+## All Sample GDS files need to be located in the same 
 ## directory.
 ##############################################################
 PATHSAMPLEGDS <- PATH_WHERE_THE_GDS_SAMPLES_FILES_ARE_LOCATED
@@ -441,7 +446,7 @@ PATHSAMPLEGDS <- PATH_WHERE_THE_GDS_SAMPLES_FILES_ARE_LOCATED
 ##############################################################
 ## The list of samples to analyse as obtained by the 
 ## PED RDS file. The samples must have an 
-## associated GDS Sample file.
+## associated Sample GDS file.
 ##############################################################
 filePED <- FILE_PED
 ped <- readRDS(filePED)
@@ -464,25 +469,25 @@ for(i in seq_len(length(listSamples))) {
     ## Compute the SNV pruned subset
     ## study.id: Study identifier as defined in the previous step.
     ##           The study identifier must be the same that the one present in
-    ##           GDS Sample file.
-    ## PATHSAMPLEGDS: All GDS Sample files must be in the same directory.
+    ##           Sample GDS file.
+    ## PATHSAMPLEGDS: All Sample GDS files must be in the same directory.
     pruningSample(gds=gds_1KG,
                     sampleCurrent = listSamples[i],
                     study.id = studyDF$study.id, 
                     PATHSAMPLEGDS = PATHSAMPLEGDS)
     
-    ## GDS Sample file for the current sample
+    ## Sample GDS file for the current sample
     ## The file name corresponds to the path + sample identifier + ".gds"
     file.GDSSample <- file.path(PATHSAMPLEGDS, paste0(listSamples[i], ".gds")
     
     ## Add the genotype information for the list of pruned SNVs 
-    ## into the GDS Sample file
+    ## into the Sample GDS file
     ## The genotype information is extracted from the 1KG GDS file
     add1KG2SampleGDS(gds = gds_1KG, gdsSampleFile = file.GDSSample, 
                         sampleCurrent = listSamples[i], 
                         study.id = studyDF$study.id))
 
-    ## Add annotation from the 1KG GDS file to the GDS Sample file
+    ## Add annotation from the 1KG GDS file to the Sample GDS file
     ## This is required.
     addStudy1Kg(gds_1KG, file.GDSSample)
 }
@@ -501,22 +506,53 @@ different inputs for DNA and RNA samples.
 
 For the DNA samples, these 2 files are required:
 
-1. The GDS Sample file
-2. The 1KG GDS file
+1. The **Sample GDS file**
+2. The **1KG GDS file**
 
 For the RNA samples, these 3 files are required:
 
-1. The GDS Sample file
-2. The 1KG GDS file
-3. The 1KG SNv Annotation GDS file
+1. The **Sample GDS file**
+2. The **1KG GDS file**
+3. The **1KG SNV Annotation GDS file**
 
 In both cases, the other required inputs are:
 
 1. The information about the length of the chromosomes
-2. The sample identifier (it corresponds to the GDS Sample file name)
+2. The sample identifier (it corresponds to the Sample GDS file name)
 3. The study identifier (it should correspond to the one used previously)
 
-The __estimateAllelicFraction()__ function processes one sample at the time. 
+The information about the length of the chromosomes must be assigned into a 
+*vector* object. This is an example on how to retrieve the information. 
+There are other ways to extract the information. 
+
+```{r extractChrLength, echo=TRUE, message=FALSE, warning=FALSE}
+###################################################################
+## Required library
+###################################################################
+library(BSgenome.Hsapiens.UCSC.hg38)
+
+###################################################################
+## The length of each chromosome is required
+## Chromosomes X, Y and M need relabeling
+## There are other ways to extract the information
+## This is one example
+###################################################################
+chrInfo <- integer(25L)
+for(i in seq_len(22L)) {
+    chrInfo[i] <- length(Hsapiens[[paste0("chr", i)]])
+}
+chrInfo[23] <- length(Hsapiens[["chrX"]])
+chrInfo[24] <- length(Hsapiens[["chrY"]])
+chrInfo[25] <- length(Hsapiens[["chrM"]])
+
+chrInfo
+```
+
+<br>
+<br>
+
+The __estimateAllelicFraction()__ function processes one sample at the time, 
+as shown in this example.  
 
 
 ```{r estimateAllelicFraction, echo=TRUE, eval=FALSE}
@@ -525,7 +561,6 @@ The __estimateAllelicFraction()__ function processes one sample at the time.
 ###################################################################
 library(RAIDS)
 library(BSgenome)
-library(BSgenome.Hsapiens.UCSC.hg38)
 
 ###################################################################
 ## The 1KG GDS file is required
@@ -543,18 +578,9 @@ file.Annot <- file.path(PATH_1KG, fileName.GDS.Annot)
 gds <- snpgdsOpen(file.GDS)
     
 ###################################################################
-## The length of each chromosome is required
-## Chromosomes X, Y and M need relabeling
-## There is other ways to extract the information
-## This is one example
+## The information about the length of the chromosomes
 ###################################################################
-chrInfo <- integer(25L)
-for(i in seq_len(22L)) {
-    chrInfo[i] <- length(Hsapiens[[paste0("chr", i)]])
-}
-chrInfo[23] <- length(Hsapiens[["chrX"]])
-chrInfo[24] <- length(Hsapiens[["chrY"]])
-chrInfo[25] <- length(Hsapiens[["chrM"]])
+head(chrInfo)
 
 ##############################################################
 ## The function must be called for each sample
@@ -568,7 +594,7 @@ listSamples <- ped[, "Name.ID"]
 sampleName <- listSamples[1]
 
 ###################################################################
-## The GDS Sample file is required
+## The Sample GDS file is required
 ###################################################################
 
 ## Name of the GDS Sample file
@@ -635,23 +661,23 @@ A synthetic profile is generated through the merging of one cancer profile
 with one 1KG sample of known ancestry. Multiple 1KG samples of different 
 ancestry are required to create a synthetic dataset that will be able to 
 show the specific accuracy for each super-population. All the synthetic 
-profiles are saved in the GDS Sample file corresponding to the cancer profile 
-used to generate the dataset.
+profiles are saved in the **Sample GDS file** corresponding to the 
+cancer profile used to generate the dataset.
 
 In summary, a fixed number of samples fo each super-population is extracted 
-from the 1KG study. The information is saved in the GDS Sample file associated 
-to the selected cancer profile. A synthetic profile is created for each 
-combination of the 1KG samples and cancer profile. The synthetic profile is 
-then saved in the GDS Sample file.
+from the 1KG study. The information is saved in the **Sample GDS file** 
+associated to the selected cancer profile. A synthetic profile is created for 
+each combination of the 1KG samples and cancer profile. The synthetic profile 
+is then saved in the **Sample GDS file**.
 
 The three functions _select1KGPop()_, _prepSynthetic()_ and _syntheticGeno()_ 
 are association to the creation of the synthetic dataset.
 
 Those 3 files are required:
 
-1. The GDS Sample file
-2. The 1KG GDS file
-3. The 1KG SNv Annotation GDS file
+1. The **Sample GDS file**
+2. The **1KG GDS file**
+3. The **1KG SNv Annotation GDS file**
 
 
 ```{r generateSynthetic, echo=TRUE, eval=FALSE}
@@ -688,21 +714,21 @@ studyDF.syn <- data.frame(study.id = "TCGA.BRCA.Synthetic",
 ## The GDS Sample file is needed
 file.GDSSample <- PATH_TO_GDS_SAMPLE_FILE
 
-##############################################################
+####################################################################
 ## The prepSynthetic() function prepares the annotations for
 ## the synthetic data
-## The information is saved into the GDS sample file
-##############################################################
+## The information is saved into the Sample GDS file
+####################################################################
 prepSynthetic(gdsSampleFile = file.GDSSample,
                 listSampleRef = listSampleRef,
                 data.id.profile = sampleName,
                 studyDF = studyDF.syn,
                 prefId = "1")
 
-##############################################################
+####################################################################
 ## Both the 1KG GDS file and the 1KG SNV Annotation GDS file
 ## are required
-##############################################################
+####################################################################
 PATH_1KG <- PATH_REF
     
 fileName.GDS <- "matGeno1000g.gds"
@@ -714,11 +740,10 @@ file.Annot <- file.path(PATH_1KG, fileName.GDS.Annot)
 gds <- snpgdsOpen(file.GDS)
 gds.Annot <- openfn.gds(file.Annot)
 
-##############################################################
-## The syntheticGeno() function generates the synthetic 
-## profiles.
+####################################################################
+## The syntheticGeno() function generates the synthetic profiles.
 ## The synthetic profiles are saved in the GDS Sample file
-##############################################################
+####################################################################
 resG <- syntheticGeno(gds = gds,
                         gdsRefAnnot = gds.Annot,
                         gdsSampleFile = file.GDSSample,
@@ -756,7 +781,7 @@ file.GDS <- file.path(PATH_1KG, fileName.GDS)
 gds <- openfn.gds(file.GDS)
 
 ####################################################################
-## The path to the directory containing the GDS Sample files
+## The path to the directory containing the Sample GDS files
 ####################################################################
 PATH_SAMPLE_GDS <- file.path("The path")
 
@@ -784,7 +809,7 @@ studyDF.syn <- data.frame(study.id = "Id of the synthetic dataset",
 ####################################################################
 ## The list of cancer samples used to generate the synthetic data 
 ## as obtained by the PED RDS file. The samples must have an 
-## associated GDS Sample file.
+## associated Sample GDS file.
 ####################################################################
 filePED <- FILE_PED
 ped <- readRDS(filePED)
@@ -814,7 +839,7 @@ sampleRM <- splitSelectByPop(dataRef)
 ## Loop for all cancer samples with associated synthetic data
 for(i in seq_len(length(listSamples))) {
 
-    ## The GDS Sample associated to the cancer sample     
+    ## The Sample GDS file associated to the cancer sample     
     file.GDSSample <- file.path(PATH_SAMPLE_GDS, 
                                     paste0(listSamples[i], ".gds"))
 
@@ -826,7 +851,7 @@ for(i in seq_len(length(listSamples))) {
             dir.create(PATH_OUT_SAMPLE)
     }
 
-    ## Open GDS Sample file      
+    ## Open the Sample GDS file      
     gdsSample <- snpgdsOpen(file.GDSSample)
 
     ## This variable will contain the results from the PCA analyses
@@ -854,7 +879,7 @@ for(i in seq_len(length(listSamples))) {
                         paste0("KNN.synt.", listSamples[i], ".", j, ".rds")))
     }
     
-    ## Close GDS Sample file (important)
+    ## Close Sample GDS file (important)
     closefn.gds(gdsSample)
 }
     
@@ -928,7 +953,7 @@ studyDF.syn <- data.frame(study.id = "Id of the synthetic dataset",
     
 ####################################################################
 ## The list of samples to analyse as obtained by the PED RDS file.
-## The samples must have an associated GDS Sample files.
+## The samples must have an associated Sample GDS files.
 ## Not needed if the list of samples is already available.
 ####################################################################
 filePED <- FILE_PED
@@ -958,7 +983,7 @@ for(i in seq_len(length(listSamples))){
     ## List of the KNN result files from PCA on synthetic data
     listFiles <- file.path(file.path(PATHKNN) , listFilesName)
 
-    ## Open GDS Sample file
+    ## Open the Sample GDS file
     gdsSample <- snpgdsOpen(file.GDSSample)
 
     resCall <- computeAncestryFromSyntheticFile(gds = gds, 
@@ -976,11 +1001,11 @@ for(i in seq_len(length(listSamples))){
             file.path(PATHOUT, paste0(listSamples[i], ".Ancestry",".csv")),
             quote = FALSE, row.names = FALSE)
     
-    ## Close GDS Sample file
+    ## Close the Sample GDS file (important)
     closefn.gds(gdsSample)
 }
 
-## Close both 1KG GDS file
+## Close the 1KG GDS file (important)
 closefn.gds(gds)
 ```
 
@@ -993,7 +1018,6 @@ closefn.gds(gds)
 # Pre-processed files are available
 
 Pre-processed files, such as the 1KG GDS file, are available at this address:
-
 
 [https://labshare.cshl.edu/shares/krasnitzlab/aicsPaper](https://labshare.cshl.edu/shares/krasnitzlab/aicsPaper)
 
