--- a/vignettes/aicsPaper.Rmd
+++ b/vignettes/aicsPaper.Rmd
@@ -171,6 +171,8 @@ The preparation of the external study data is divided is sub-steps.
 knitr::include_graphics("MainSteps_Step2_v01.png")
 ```
 
+<br>
+
 The required sub-steps are:
 
 1. Create a directory containing the 3 reference files from 1KG
@@ -527,7 +529,7 @@ There are other ways to extract the information.
 
 ```{r extractChrLength, echo=TRUE, message=FALSE, warning=FALSE}
 ###################################################################
-## Required library
+## Load required library
 ###################################################################
 library(BSgenome.Hsapiens.UCSC.hg38)
 
@@ -597,11 +599,11 @@ sampleName <- listSamples[1]
 ## The Sample GDS file is required
 ###################################################################
 
-## Name of the GDS Sample file
-## The name must corresponds to the sample identifier
+## Name of the Sample GDS file
+## The name must correspond to the sample identifier
 file.GDSSample <- file.path(PATHSAMPLEGDS, paste0(sampleName, ".gds"))
 
-## Open the GDS Sample file in writing mode
+## Open the Sample GDS file in writing mode
 gdsSample <- openfn.gds(file.GDSSample, readonly = FALSE)
 
 ###################################################################
@@ -711,7 +713,7 @@ studyDF.syn <- data.frame(study.id = "TCGA.BRCA.Synthetic",
                             study.platform = "WXS",
                             stringsAsFactors = FALSE)
 
-## The GDS Sample file is needed
+## The Sample GDS file is needed
 file.GDSSample <- PATH_TO_GDS_SAMPLE_FILE
 
 ####################################################################
@@ -742,7 +744,7 @@ gds.Annot <- openfn.gds(file.Annot)
 
 ####################################################################
 ## The syntheticGeno() function generates the synthetic profiles.
-## The synthetic profiles are saved in the GDS Sample file
+## The synthetic profiles are saved in the Sample GDS file
 ####################################################################
 resG <- syntheticGeno(gds = gds,
                         gdsRefAnnot = gds.Annot,
@@ -904,6 +906,7 @@ number of neighbors used for the classification.
 knitr::include_graphics("MainSteps_Step4_v01.png")
 ```
 
+<br>
 
 The PCA of the sample and KNN sample and Call the ancestry with the optimal 
 _K_ and _D_ parameters.
